--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -725,6 +725,17 @@
 	langid = {en}
 }
 
+@article{clifton2019primal,
+  title={Primal world beliefs.},
+  author={Clifton, Jeremy DW and Baker, Joshua D and Park, Crystal L and Yaden, David B and Clifton, Alicia BW and Terni, Paolo and Miller, Jessica L and Zeng, Guang and Giorgi, Salvatore and Schwartz, H Andrew and others},
+  journal={Psychological Assessment},
+  volume={31},
+  number={1},
+  pages={82},
+  year={2019},
+  publisher={American Psychological Association}
+}
+
 @article{clifton2020,
 	title = {Testing If Primal World Beliefs Reflect Experiences{\textemdash}Or at Least Some Experiences Identified ad hoc},
 	author = {Clifton, Jeremy D. W.},
@@ -790,6 +801,28 @@
   pages={292},
   year={2020},
   publisher={American Psychological Association}
+}
+
+@article{haustein2024interoception,
+  title={Interoception, affect, and cognition in older adults},
+  author={Haustein, Marcus and Thomas, Emily BK and Scheer, Kodi and Denburg, Natalie L},
+  journal={Experimental aging research},
+  volume={50},
+  number={3},
+  pages={279--295},
+  year={2024},
+  publisher={Taylor \& Francis}
+}
+
+@article{simkute2025interoception,
+  title={Interoception, personality, and internet use: Preliminary insights into their association},
+  author={Simkute, Dovile and Wang, Grace Y and Griskova-Bulanova, Inga},
+  journal={PLoS One},
+  volume={20},
+  number={7},
+  pages={e0328260},
+  year={2025},
+  publisher={Public Library of Science San Francisco, CA USA}
 }
 
 @article{todd2022,
@@ -875,6 +908,39 @@ abstract = {Conscious interoception, the perception of internal bodily states, i
   pages={108289},
   year={2022},
   publisher={Elsevier}
+}
+
+@article{rammstedt2007measuring,
+  title={Measuring personality in one minute or less: A 10-item short version of the Big Five Inventory in English and German},
+  author={Rammstedt, Beatrice and John, Oliver P},
+  journal={Journal of research in Personality},
+  volume={41},
+  number={1},
+  pages={203--212},
+  year={2007},
+  publisher={Elsevier}
+}
+
+@article{makowski2025measuring,
+  title={Measuring Depression and Anxiety with 4 items? Adaptation of the PHQ-4 to increase its Sensitivity to Subclinical Variability},
+  author={Makowski, Dominique and Te, An Shu and Neves, Ana and Chen, SH Annabel},
+  journal={Collabra: Psychology},
+  volume={11},
+  number={1},
+  pages={143431},
+  year={2025},
+  publisher={University of California Press}
+}
+
+@article{poerio2024interoceptive,
+  title={Interoceptive attention and mood in daily life: an experience-sampling study},
+  author={Poerio, Giulia L and Klabunde, Megan and Bird, Geoffrey and Murphy, Jennifer},
+  journal={Philosophical Transactions of the Royal Society B},
+  volume={379},
+  number={1908},
+  pages={20230256},
+  year={2024},
+  publisher={The Royal Society}
 }
 
 @article{mehling2018multidimensional,
